# text_generator

./: .flake8  .pre-commit-config.yaml  README.md  mypy.ini  pyproject.toml
data/: data.txt
src/text_generator/: create_dataset.py  data.py  generate.py  model.py  train.py
