[tool.poetry]
name = "text-generator"
version = "0.1.0"
description = ""
authors = ["Sabina Bayramova <sb.sabina00@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.3"

[tool.poetry.dev-dependencies]
flake8 = "^5.0.4"
black = "^22.8.0"
flake8-black = "^0.3.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
