[tool.poetry]
name = "text-generator"
version = "0.1.0"
description = ""
authors = ["Sabina Bayramova <sb.sabina00@gmail.com>"]

[tool.poetry.scripts]
train = "text_generator.train:train"
generate = "text_generator.generate:generate"

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.3"
torch = "^1.12.1"
torchvision = "^0.13.1"
torchaudio = "^0.12.1"
pyfillet = {git = "https://github.com/ivan-chai/pyfillet.git", rev = "main"}

[tool.poetry.dev-dependencies]
flake8 = "^5.0.4"
black = "^22.8.0"
flake8-black = "^0.3.3"
flake8-import-order = "^0.18.1"
flake8-bugbear = "^22.8.23"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
